# web-terminal

./: .gitignore  README.md  deno.json  index.html  vite.config.ts
.github/workflows/: release.yml
scripts/: dev.ts
server/: Cargo.toml
server/src/: main.rs  protocol.rs  pty.rs  ws.rs
src/: main.ts  style.css
src/ui/: App.ts  Session.ts  TabBar.ts
