[package]
name = "terminal-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "terminal-server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs"] }
pty-process = "0.4"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
rust-embed = "8"
mime_guess = "2"
clap = { version = "4", features = ["derive", "env"] }

[profile.release]
opt-level = 2
lto = true
strip = true
